app/main/default/objects/OAH_Contact__c/OAH_Contact__c.object-meta.xml
<CustomObject>
    <description>OAH Contact information</description>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OAH Contacts</relationshipLabel>
        <relationshipName>OAH_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OAH_Contact_ID__c</fullName>
        <description>Contact&apos;s first name</description>
        <displayFormat>Contact-{0000}</displayFormat>
        <label>OAH Contact ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Old_Record_ID__c</fullName>
        <label>Old Record ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_No__c</fullName>
        <label>Telephone No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X2nd_Address_Line_1__c</fullName>
        <description>Second Address line 1</description>
        <label>Address2 Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Address_Line_2__c</fullName>
        <description>2nd Address line 2</description>
        <label>Address2 Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_City__c</fullName>
        <description>City information for 2nd address</description>
        <label>City2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_State__c</fullName>
        <description>State information for 2nd address</description>
        <label>State2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Telephone_No__c</fullName>
        <description>Second Telephone information</description>
        <label>Telephone No.2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X2nd_Zip_Code__c</fullName>
        <description>Zip code information for 2nd address</description>
        <label>Zip Code2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Address_Line_1__c</fullName>
        <description>Address Line 1 information for 3rd address</description>
        <label>Address3 Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Address_Line_2__c</fullName>
        <description>Address Line 2 information for 3rd address</description>
        <label>Address3 Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_City__c</fullName>
        <description>City information for 3rd address</description>
        <label>City3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_State__c</fullName>
        <description>State information for 3rd address</description>
        <label>State3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Telephone_No__c</fullName>
        <description>Third telephone number</description>
        <label>Telephone No.3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X3rd_Zip_Code__c</fullName>
        <description>Zip code for 3rd address</description>
        <label>Zip Code3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>OAH Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OAH_Contact_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAH Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>