app/main/default/objects/OAH_Contact__c/fields/Address_Line_1__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>