app/main/default/objects/OAH_Contact__c/fields/City__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>