app/main/default/objects/OAH_Contact__c/fields/ContactId__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OAH Contacts</relationshipLabel>
        <relationshipName>OAH_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>