app/main/default/objects/OAH_Contact__c/fields/Email__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
</CustomObject>