app/main/default/objects/OAH_Contact__c/fields/Fax__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
</CustomObject>