app/main/default/objects/OAH_Contact__c/fields/OAH_Contact_ID__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>OAH_Contact_ID__c</fullName>
        <description>Contact&apos;s first name</description>
        <displayFormat>Contact-{0000}</displayFormat>
        <label>OAH Contact ID</label>
        <type>AutoNumber</type>
    </fields>
</CustomObject>