app/main/default/objects/OAH_Contact__c/fields/State__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
</CustomObject>