app/main/default/objects/OAH_Contact__c/fields/Telephone_No__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Telephone_No__c</fullName>
        <label>Telephone No.</label>
        <type>Phone</type>
    </fields>
</CustomObject>