app/main/default/objects/OAH_Contact__c/fields/X2nd_Address_Line_1__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>X2nd_Address_Line_1__c</fullName>
        <description>Second Address line 1</description>
        <label>Address2 Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>