app/main/default/objects/OAH_Contact__c/fields/X2nd_Address_Line_2__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>X2nd_Address_Line_2__c</fullName>
        <description>2nd Address line 2</description>
        <label>Address2 Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>