app/main/default/objects/OAH_Contact__c/fields/X2nd_City__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>X2nd_City__c</fullName>
        <description>City information for 2nd address</description>
        <label>City2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>