app/main/default/objects/OAH_Contact__c/fields/X2nd_State__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>X2nd_State__c</fullName>
        <description>State information for 2nd address</description>
        <label>State2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
</CustomObject>