app/main/default/objects/OAH_Contact__c/fields/X2nd_Telephone_No__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>X2nd_Telephone_No__c</fullName>
        <description>Second Telephone information</description>
        <label>Telephone No.2</label>
        <type>Phone</type>
    </fields>
</CustomObject>