app/main/default/objects/OAH_Contact__c/fields/X2nd_Zip_Code__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>X2nd_Zip_Code__c</fullName>
        <description>Zip code information for 2nd address</description>
        <label>Zip Code2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>