app/main/default/objects/OAH_Contact__c/fields/X3rd_Address_Line_1__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>X3rd_Address_Line_1__c</fullName>
        <description>Address Line 1 information for 3rd address</description>
        <label>Address3 Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>