app/main/default/objects/OAH_Contact__c/fields/X3rd_City__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>X3rd_City__c</fullName>
        <description>City information for 3rd address</description>
        <label>City3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>