app/main/default/objects/OAH_Contact__c/fields/X3rd_State__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>X3rd_State__c</fullName>
        <description>State information for 3rd address</description>
        <label>State3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
</CustomObject>