app/main/default/objects/OAH_Contact__c/fields/X3rd_Telephone_No__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>X3rd_Telephone_No__c</fullName>
        <description>Third telephone number</description>
        <label>Telephone No.3</label>
        <type>Phone</type>
    </fields>
</CustomObject>