app/main/default/objects/OAH_Contact__c/fields/X3rd_Zip_Code__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>X3rd_Zip_Code__c</fullName>
        <description>Zip code for 3rd address</description>
        <label>Zip Code3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>