app/main/default/objects/OAH_Contact__c/fields/Zip_Code__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>