app/main/default/objects/OAH_Contact__c/listViews/All.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OAH_Contact_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>